tests/NormalTests/paczka1/fuzzy1/93334022.err
Error in line 1: uu4n S929 19,1
Error in line 2: Drd6h7Bu0 S863 41,8
Error in line 12: cBZnxyMg S863 51,0
Error in line 14: 1Li S461 67,0
Error in line 23: 1Li S929 70,1
